syntax = "proto3";

option csharp_namespace = "gRPCClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetFile (Id) returns (MyFile);
  rpc CreateFile (MyFile) returns (Id);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


message MyFile {
  string name = 1;
  string description = 2;
  bytes file = 3;
}

// The response message containing the greetings.
message Id {
  int32 new_id = 1;
}